@@ -768,6 +768,7 @@ CREATE TABLE ART_FTP_SERVERS
 	NAME VARCHAR(50),
 	DESCRIPTION VARCHAR(200),
 	ACTIVE INTEGER,
+	CONNECTION_TYPE VARCHAR(20),
 	SERVER VARCHAR(100),
 	PORT INTEGER,
 	FTP_USER VARCHAR(50),
