@@ -101,7 +101,7 @@ CREATE INDEX IDX_QRTZ_FT_T_G ON PUBLIC.QRTZ_FIRED_TRIGGERS(SCHED_NAME,TRIGGER_NA
 CREATE INDEX IDX_QRTZ_FT_TG ON PUBLIC.QRTZ_FIRED_TRIGGERS(SCHED_NAME,TRIGGER_GROUP)
 CREATE MEMORY TABLE PUBLIC.QRTZ_SCHEDULER_STATE(SCHED_NAME VARCHAR(120) NOT NULL,INSTANCE_NAME VARCHAR(200) NOT NULL,LAST_CHECKIN_TIME NUMERIC(13) NOT NULL,CHECKIN_INTERVAL NUMERIC(13) NOT NULL,PRIMARY KEY(SCHED_NAME,INSTANCE_NAME))
 CREATE MEMORY TABLE PUBLIC.QRTZ_LOCKS(SCHED_NAME VARCHAR(120) NOT NULL,LOCK_NAME VARCHAR(40) NOT NULL,PRIMARY KEY(SCHED_NAME,LOCK_NAME))
-CREATE MEMORY TABLE PUBLIC.ART_FTP_SERVERS(FTP_SERVER_ID INTEGER NOT NULL,NAME VARCHAR(50),DESCRIPTION VARCHAR(200),ACTIVE INTEGER,SERVER VARCHAR(100),PORT INTEGER,FTP_USER VARCHAR(50),PASSWORD VARCHAR(100),REMOTE_DIRECTORY VARCHAR(200),CREATION_DATE TIMESTAMP,CREATED_BY VARCHAR(50),UPDATE_DATE TIMESTAMP,UPDATED_BY VARCHAR(50),CONSTRAINT AFS_PK PRIMARY KEY(FTP_SERVER_ID),CONSTRAINT AFS_NAME_UQ UNIQUE(NAME))
+CREATE MEMORY TABLE PUBLIC.ART_FTP_SERVERS(FTP_SERVER_ID INTEGER NOT NULL,NAME VARCHAR(50),DESCRIPTION VARCHAR(200),ACTIVE INTEGER,SERVER VARCHAR(100),PORT INTEGER,FTP_USER VARCHAR(50),PASSWORD VARCHAR(100),REMOTE_DIRECTORY VARCHAR(200),CREATION_DATE TIMESTAMP,CREATED_BY VARCHAR(50),UPDATE_DATE TIMESTAMP,UPDATED_BY VARCHAR(50),CONNECTION_TYPE VARCHAR(20),CONSTRAINT AFS_PK PRIMARY KEY(FTP_SERVER_ID),CONSTRAINT AFS_NAME_UQ UNIQUE(NAME))
 CREATE MEMORY TABLE PUBLIC.ART_LOGGED_IN_USERS(LOGGED_IN_USERS_ID VARCHAR(100) NOT NULL,USER_ID INTEGER NOT NULL,USERNAME VARCHAR(50) NOT NULL,LOGIN_DATE TIMESTAMP,IP_ADDRESS VARCHAR(50),CONSTRAINT ALU_PK PRIMARY KEY(LOGGED_IN_USERS_ID))
 CREATE MEMORY TABLE PUBLIC.ART_CUSTOM_UPGRADES(DATABASE_VERSION VARCHAR(50),UPGRADED INTEGER)
 ALTER SEQUENCE SYSTEM_LOBS.LOB_ID RESTART WITH 1
@@ -454,6 +454,7 @@ INSERT INTO ART_DRILLDOWN_QUERIES VALUES(83,23,1,'Drill','details','htmlDataTabl
 INSERT INTO ART_DRILLDOWN_QUERIES VALUES(84,23,1,'Drill','details','htmlDataTable',1,1)
 INSERT INTO ART_DRILLDOWN_QUERIES VALUES(86,23,1,'Drill','details','htmlDataTable',1,1)
 INSERT INTO ART_USER_JOBS VALUES(2,'auser',NULL,NULL,NULL,NULL,2,NULL,NULL)
+INSERT INTO ART_DATABASE_VERSION VALUES('3.1-snapshot')
 INSERT INTO ART_DATABASE_VERSION VALUES('3.1-snapshot')
 INSERT INTO ART_PARAMETERS VALUES(1,'regionId','Select Region','Single-Value','Region','Select one item from the list','Integer','',0,1,4,0,0,0,NULL,NULL,'2016-04-15 09:42:18.784000','admin',NULL,0,NULL,NULL,NULL)
 INSERT INTO ART_PARAMETERS VALUES(2,'startDate','From Date','Single-Value','From','Pick a date by clicking on the calendar icon','Date','2010-01-01',0,0,4,0,0,0,NULL,NULL,'2017-07-05 12:24:17.178000','admin',0,0,'','',NULL)
