@@ -148,6 +148,7 @@ filters.message.linkedReportsExist = Cannot delete record. The following reports
 
 footer.link.contactSupport = Contact Support
 
+ftpServers.label.connectionType  = Connection Type
 ftpServers.label.port            = Port
 ftpServers.label.remoteDirectory = Remote Directory
 ftpServers.label.server          = Server
