@@ -127,6 +127,7 @@ filters.message.linkedReportsExist = Kumbukumbu haiwezi kufutwa. Ripoti zifuataz
 
 footer.link.contactSupport = Wasiliana na wasaidizi
 
+ftpServers.label.connectionType  = Aina ya unganisho
 ftpServers.label.port            = Mlango
 ftpServers.label.remoteDirectory = Saraka ya mbali
 ftpServers.label.server          = Seva
