@@ -7,6 +7,7 @@ ART 3.0.1
 * When editing a job, update from email if owner email has changed
 * Don't use email input type for user email field
 * Enable use of default report group
+* Added SFTP option
 
 ART 3.0
 * Reorganised the code for easier maintenance and enhanced user experience
